--- a/packages/exercise-service/package.json
+++ b/packages/exercise-service/package.json
@@ -13,6 +13,7 @@
     "express": "4.18.2",
     "helmet": "7.0.0",
     "joi": "17.10.0",
+    "jsonwebtoken": "9.0.2",
     "node": "16.20.2",
     "sqlite3": "5.1.6"
   },
@@ -38,6 +39,7 @@
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.4",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/node": "16.11.31",
     "@types/supertest": "2.0.12",
     "concurrently": "8.2.1",
